Minor refactoring of css styles.

--- a/style.css
+++ b/style.css
@@ -4,3 +4,12 @@
 	border-right: 1px solid black;
 	border-bottom: 1px solid black;
 }
+
+.header {
+	background-color:#FFA500;
+}
+
+.footer {
+	background-color:#FFA500;
+	text-align:center;
+}
