Added myvehicles and mytrips. Remove add functionality from index.php.

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 	display: block;
 }
 
-.addTrip {
+.addInfo {
 	border-left: 1px solid #000 !important;
 	border-bottom: 1px solid #000 !important;
 	border-right: 1px solid #000 !important;
